Add support for setting environment variables during cf:push. Added listing of env in cf:help.